// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`array > ignores unknown checker 1`] = `
"{
    "$schema": "http://json-schema.org/draft-07/schema#",
    "$ref": "#/definitions/ArraySchemaUnknown",
    "definitions": {
        "ArraySchemaUnknown": {
            "type": "array",
            "items": {
                "type": "string"
            }
        }
    }
}"
`;

exports[`array > renders items and constraints 1`] = `
"{
    "$schema": "http://json-schema.org/draft-07/schema#",
    "$ref": "#/definitions/ArraySchema",
    "definitions": {
        "ArraySchema": {
            "type": "array",
            "items": {
                "type": "string"
            },
            "minItems": 1
        }
    }
}"
`;

exports[`array > renders max constraint 1`] = `
"{
    "$schema": "http://json-schema.org/draft-07/schema#",
    "$ref": "#/definitions/ArraySchemaMax",
    "definitions": {
        "ArraySchemaMax": {
            "type": "array",
            "items": {
                "type": "string"
            },
            "maxItems": 2
        }
    }
}"
`;
